examples/test/testpolicy7544.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7544
  namespace: namespace225
spec:
  podSelector:
    matchLabels:
      key5: value17
      key43: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value6
          key18: value11
          key22: value19
      podSelector:
        matchLabels:
          key31: value11
          key24: value15
          key11: value14
